--- a/app/src/main/res/layout/frag_tasks.xml
+++ b/app/src/main/res/layout/frag_tasks.xml
@@ -24,8 +24,7 @@
         android:id="@+id/linear_layout_no_tasks"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
-        tools:visibility="visible">
+        android:visibility="gone">
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/animation_empty_list"
             android:layout_width="match_parent"
@@ -33,6 +32,22 @@
             android:layout_gravity="center"
             app:lottie_rawRes="@raw/empty_list_animation"
             app:lottie_autoPlay="true"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linear_layout_loading"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        tools:visibility="visible">
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/animation_loading"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:lottie_rawRes="@raw/loading_animation"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"/>
     </LinearLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
