--- a/app/src/main/res/layout/frag_add_edit_task.xml
+++ b/app/src/main/res/layout/frag_add_edit_task.xml
@@ -16,7 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/task_name"
-            android:inputType="text"/>
+            android:inputType="text"
+            android:imeOptions="actionDone"/>
 
         <TextView
             android:id="@+id/text_view_task_created"
